# etf-copilot

./: .gitignore  README.md  pyproject.toml
configs/: settings.py  universe.py
scripts/: run_features.py  run_ingestion.py
src/features/: beta.py  macro.py  momentum.py  pipeline.py  volatility.py
src/ingestion/: fetcher.py  schemas.py
src/storage/: database.py
src/utils/: logging.py
